editing tests and services